--- a/px_medical/web/WEB-INF/web.xml
+++ b/px_medical/web/WEB-INF/web.xml
@@ -2,6 +2,10 @@
 <!-- Copyright (c) 2002 by ObjectLearn. All Rights Reserved. -->
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:javaee="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd" id="WebApp_1226641136656" version="2.4">
 
+  <context-param>  
+    <param-name>contextConfigLocation</param-name>  
+    <param-value>classpath:applicationContext.xml</param-value>  
+  </context-param>  
   <filter>
     <filter-name>HttpsCheckFilter</filter-name>
     <filter-class>com.bofan.sso.filter.HttpsCheckFilter</filter-class>
